--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "fd7a1647",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: numpy in c:\\users\\anmrt\\desktop\\termpaper_6sem\\venv\\lib\\site-packages (2.2.4)\n",
+      "Requirement already satisfied: numpy in c:\\users\\anmrt\\desktop\\termpaper_6sem\\venv\\lib\\site-packages (2.1.3)\n",
       "Requirement already satisfied: pandas in c:\\users\\anmrt\\desktop\\termpaper_6sem\\venv\\lib\\site-packages (2.2.3)\n",
       "Requirement already satisfied: matplotlib in c:\\users\\anmrt\\desktop\\termpaper_6sem\\venv\\lib\\site-packages (3.10.1)\n",
       "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\anmrt\\desktop\\termpaper_6sem\\venv\\lib\\site-packages (from pandas) (2.9.0.post0)\n",
@@ -26,15 +26,6 @@
       "Requirement already satisfied: six>=1.5 in c:\\users\\anmrt\\desktop\\termpaper_6sem\\venv\\lib\\site-packages (from python-dateutil>=2.8.2->pandas) (1.17.0)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "[notice] A new release of pip is available: 24.0 -> 25.0.1\n",
-      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
-     ]
     }
    ],
    "source": [
@@ -43,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "e447995d",
    "metadata": {},
    "outputs": [
@@ -59,10 +50,7 @@
      "output_type": "stream",
      "text": [
       "ERROR: Could not find a version that satisfies the requirement PIL (from versions: none)\n",
-      "ERROR: No matching distribution found for PIL\n",
-      "\n",
-      "[notice] A new release of pip is available: 24.0 -> 25.0.1\n",
-      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+      "ERROR: No matching distribution found for PIL\n"
      ]
     }
    ],
@@ -72,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "d3c67a3d",
    "metadata": {},
    "outputs": [],
@@ -86,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "cfeed1d2",
    "metadata": {},
    "outputs": [
@@ -143,6 +131,161 @@
     "# 1. Датесет сбалансирован - по 1600 изображений на каждый класс\n",
     "# 2. Размеры изображений варьируются, потребуется стандартизация\n",
     "# 3. Необходима аугментация данных для улучшения обобщающей способности модели"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "64e67876",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: scikit-learn in c:\\users\\anmrt\\desktop\\termpaper_6sem\\venv\\lib\\site-packages (1.6.1)\n",
+      "Requirement already satisfied: numpy>=1.19.5 in c:\\users\\anmrt\\desktop\\termpaper_6sem\\venv\\lib\\site-packages (from scikit-learn) (2.1.3)\n",
+      "Requirement already satisfied: scipy>=1.6.0 in c:\\users\\anmrt\\desktop\\termpaper_6sem\\venv\\lib\\site-packages (from scikit-learn) (1.15.2)\n",
+      "Requirement already satisfied: joblib>=1.2.0 in c:\\users\\anmrt\\desktop\\termpaper_6sem\\venv\\lib\\site-packages (from scikit-learn) (1.4.2)\n",
+      "Requirement already satisfied: threadpoolctl>=3.1.0 in c:\\users\\anmrt\\desktop\\termpaper_6sem\\venv\\lib\\site-packages (from scikit-learn) (3.6.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install scikit-learn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "9f97369d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: seaborn in c:\\users\\anmrt\\desktop\\termpaper_6sem\\venv\\lib\\site-packages (0.13.2)\n",
+      "Requirement already satisfied: numpy!=1.24.0,>=1.20 in c:\\users\\anmrt\\desktop\\termpaper_6sem\\venv\\lib\\site-packages (from seaborn) (2.1.3)\n",
+      "Requirement already satisfied: pandas>=1.2 in c:\\users\\anmrt\\desktop\\termpaper_6sem\\venv\\lib\\site-packages (from seaborn) (2.2.3)\n",
+      "Requirement already satisfied: matplotlib!=3.6.1,>=3.4 in c:\\users\\anmrt\\desktop\\termpaper_6sem\\venv\\lib\\site-packages (from seaborn) (3.10.1)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in c:\\users\\anmrt\\desktop\\termpaper_6sem\\venv\\lib\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (1.3.1)\n",
+      "Requirement already satisfied: cycler>=0.10 in c:\\users\\anmrt\\desktop\\termpaper_6sem\\venv\\lib\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (0.12.1)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in c:\\users\\anmrt\\desktop\\termpaper_6sem\\venv\\lib\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (4.57.0)\n",
+      "Requirement already satisfied: kiwisolver>=1.3.1 in c:\\users\\anmrt\\desktop\\termpaper_6sem\\venv\\lib\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (1.4.8)\n",
+      "Requirement already satisfied: packaging>=20.0 in c:\\users\\anmrt\\desktop\\termpaper_6sem\\venv\\lib\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (24.2)\n",
+      "Requirement already satisfied: pillow>=8 in c:\\users\\anmrt\\desktop\\termpaper_6sem\\venv\\lib\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (11.1.0)\n",
+      "Requirement already satisfied: pyparsing>=2.3.1 in c:\\users\\anmrt\\desktop\\termpaper_6sem\\venv\\lib\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (3.2.3)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\anmrt\\desktop\\termpaper_6sem\\venv\\lib\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (2.9.0.post0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\anmrt\\desktop\\termpaper_6sem\\venv\\lib\\site-packages (from pandas>=1.2->seaborn) (2025.2)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in c:\\users\\anmrt\\desktop\\termpaper_6sem\\venv\\lib\\site-packages (from pandas>=1.2->seaborn) (2025.2)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\anmrt\\desktop\\termpaper_6sem\\venv\\lib\\site-packages (from python-dateutil>=2.7->matplotlib!=3.6.1,>=3.4->seaborn) (1.17.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install seaborn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "67d04c53",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR: Could not find a version that satisfies the requirement tenserflow (from versions: none)\n",
+      "ERROR: No matching distribution found for tenserflow\n"
+     ]
+    }
+   ],
+   "source": [
+    "%pip install tenserflow"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "200e8ce2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import classification_report, confusion_matrix\n",
+    "import seaborn as sns\n",
+    "import tensorflow as tf\n",
+    "from tensorflow.keras import layers, models, applications\n",
+    "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
+    "from tensorflow.keras.callbacks import EarlyStopping, ReduceLROnPlateau\n",
+    "from tensorflow.keras.optimizers import Adam\n",
+    "from tensorflow.keras.utils import to_categorical"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31e69f3e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 8960 images belonging to 7 classes.\n",
+      "Found 2240 images belonging to 7 classes.\n"
+     ]
+    }
+   ],
+   "source": [
+    "IMG_SIZE = 128\n",
+    "BATCH_SIZE = 32\n",
+    "EPOCHS = 30\n",
+    "NUM_CLASSES = len(classes)\n",
+    "\n",
+    "# Генераторы данных с аугментацией\n",
+    "train_datagen = ImageDataGenerator(\n",
+    "    rescale=1./255,\n",
+    "    rotation_range=40,\n",
+    "    width_shift_range=0.2,\n",
+    "    height_shift_range=0.2,\n",
+    "    shear_range=0.2,\n",
+    "    zoom_range=0.2,\n",
+    "    horizontal_flip=True,\n",
+    "    fill_mode='nearest',\n",
+    "    validation_split=0.2  # 20% данных для валидации\n",
+    ")\n",
+    "\n",
+    "# Генератор для тренировочных данных\n",
+    "train_generator = train_datagen.flow_from_directory(\n",
+    "    data_dir,\n",
+    "    target_size=(IMG_SIZE, IMG_SIZE),\n",
+    "    batch_size=BATCH_SIZE,\n",
+    "    class_mode='categorical',\n",
+    "    subset='training',\n",
+    "    shuffle=True\n",
+    ")\n",
+    "\n",
+    "# Генератор для валидационных данных\n",
+    "val_generator = train_datagen.flow_from_directory(\n",
+    "    data_dir,\n",
+    "    target_size=(IMG_SIZE, IMG_SIZE),\n",
+    "    batch_size=BATCH_SIZE,\n",
+    "    class_mode='categorical',\n",
+    "    subset='validation',\n",
+    "    shuffle=False\n",
+    ")"
    ]
   }
  ],
